captura da variável de ambiente ou chave estática em application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,6 @@ spring.jpa.show-sql=true
 # H2 Console
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+
+#Chamando variável de ambiente, puxa de JWT_SECRET ou usa a string my_secret_key
+api.security.token.secret=${JWT_SECRET:my_secret_key}
